--- a/MyOAuth/app/src/main/res/layout/activity_main.xml
+++ b/MyOAuth/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/facebook_sign_in_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="16dp"
+        app:layout_constraintBottom_toTopOf="@id/my_text" />
+
     <com.google.android.gms.common.SignInButton
         android:id="@+id/google_sign_in_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-/>
+        app:layout_constraintBottom_toTopOf="@id/facebook_sign_in_button" />
 
 </android.support.constraint.ConstraintLayout>
